# fitarchiver

./: .gitlint  .hgtags  .pre-commit-config.yaml  Cargo.toml  README.md  RELEASE.md  build.rs
src/: fitarchiver.rs  main.rs
test/: test_data_01.fit
