[package]
name = "fitarchiver"
authors = [ "Markus Braun <markus.braun@krawel.de>" ]
description = "Rename FIT files based on activity data and copy it to a directory based on year and month of the activity."
version = "0.1.3"
edition = "2021"
build = "build.rs"

[dependencies]
aho-corasick = "1.0.2"
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["wrap_help", "derive"] }
fitparser = "0.7.0"

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build"] }
anyhow = "1.0.89"

[dev-dependencies]
tempdir = "0.3.7"
