[package]
name = "fitarchiver"
authors = [ "Markus Braun <markus.braun@krawel.de>" ]
description = "Rename FIT files based on activity data and copy it to a directory based on year and month of the activity."
version = "0.1.4"
edition = "2021"
build = "build.rs"

[dependencies]
aho-corasick = "1.1.3"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["wrap_help", "derive"] }
fitparser = "0.10.0"

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["build"] }
anyhow = "1.0.98"

[dev-dependencies]
tempdir = "0.3.7"
